--- a/labs/project.tex
+++ b/labs/project.tex
@@ -1,4 +1,4 @@
-\documentclass[10 pt, twoside]{IEEEtran} 
+\documentclass[10 pt, journal, twoside]{IEEEtran} 
 \usepackage{bm}
 \usepackage{url}
 \usepackage{tikz}
@@ -28,7 +28,7 @@
 \usepackage[pagebackref=true,breaklinks=true,colorlinks=true, citecolor=green,linkcolor=cyan,urlcolor=blue,bookmarks=true]{hyperref}
 
 
-\title{RBOT 250: Homework Solutions}
+\title{RBOT 250: Term Project}
 \author{Dr. Olalekan Ogunmolu}
 
 \DeclareGraphicsExtensions{.pdf,.jpeg,.png,.eps}
@@ -61,16 +61,14 @@
 	% activate no dash in reference names 
 	\bstctlcite{IEEEexample:BSTcontrol}
 	
-	\title{Homework Solutions}
+	\title{Term Project}
 	 
 	\author{Olalekan Ogunmolu}
 
-\input{sec/hw1}
-\input{sec/hw2}
-\input{sec/hw3}
+\input{proj.tex}
 
 % ---- Bibliography ----
 \providecommand\BIBentryALTinterwordstretchfactor{2.5}
 \bibliographystyle{IEEEtran}
-\bibliography{../../Papers/SRS/Continuum/biblio}	
+%\bibliography{../../Papers/SRS/Continuum/biblio}	
 \end{document}	
