--- a/lec_notes/Brandeis.tex
+++ b/lec_notes/Brandeis.tex
@@ -129,10 +129,11 @@
 %\input{sections/statics_vel_kine}
 \input{sections/dyna_cont}
 \input{sections/motion_planning}
+\input{section/term_project}
 %
 % ---- Bibliography ----
 \providecommand\BIBentryALTinterwordstretchfactor{2.5}
 \bibliographystyle{wafr.bst}
-\bibliography{../../Papers/SRS/Continuum/biblio,../../Papers/iDG/IROS18/root}
+\bibliography{../../Papers/SRS/Continuum/biblio,../../Papers/iDG/IROS18/root, biblio}
 
 \end{document}
