--- a/lec_notes/Brandeis.tex
+++ b/lec_notes/Brandeis.tex
@@ -134,6 +134,7 @@
 % ---- Bibliography ----
 \providecommand\BIBentryALTinterwordstretchfactor{2.5}
 \bibliographystyle{wafr.bst}
-\bibliography{../../Papers/SRS/Continuum/biblio,../../Papers/iDG/IROS18/root, biblio}
+%\addbibresource{biblio}
+\bibliography{biblio,../../Papers/SRS/Continuum/biblio,../../Papers/iDG/IROS2018/root}
 
 \end{document}
