--- a/lec_notes/biblio.bib
+++ b/lec_notes/biblio.bib
@@ -1,3 +1,11 @@
+@article{D3VO,
+  title={D3VO: Deep Depth, Deep Pose and Deep Uncertainty for Monocular Visual Odometry},
+  author={Yang, Nan and von Stumberg, Lukas and Wang, Rui and Cremers, Daniel},
+  journal={arXiv preprint arXiv:2003.01060},
+  year={2020}
+};
+
+
 @article{SLAMLeonard,
   title={Past, present, and future of simultaneous localization and mapping: Toward the robust-perception age},
   author={Cadena, Cesar and Carlone, Luca and Carrillo, Henry and Latif, Yasir and Scaramuzza, Davide and Neira, Jos{\'e} and Reid, Ian and Leonard, John J},
