--- a/RBOT250_2020/RBOT250_Notes/biblio.bib
+++ b/RBOT250_2020/RBOT250_Notes/biblio.bib
@@ -1,3 +1,13 @@
+@inproceedings{besl1992method,
+  title={Method for registration of 3-D shapes},
+  author={Besl, Paul J and McKay, Neil D},
+  booktitle={Sensor fusion IV: control paradigms and data structures},
+  volume={1611},
+  pages={586--606},
+  year={1992},
+  organization={International Society for Optics and Photonics}
+};
+
 @article{D3VO,
   title={D3VO: Deep Depth, Deep Pose and Deep Uncertainty for Monocular Visual Odometry},
   author={Yang, Nan and von Stumberg, Lukas and Wang, Rui and Cremers, Daniel},
