--- a/RBOT_101/RBOT101_Notes/biblio.bib
+++ b/RBOT_101/RBOT101_Notes/biblio.bib
@@ -1,3 +1,27 @@
+@article{Kabsch1978,
+author = {Kabsch, W.},
+doi = {10.1107/S0567739478001680},
+file = {:Users/olalekanogunmolu/Library/Application Support/Mendeley Desktop/Downloaded/Kabsch - 1978 - A discussion of the solution for the best rotation to relate two sets of vectors.pdf:pdf},
+issn = {16005724},
+journal = {Acta Crystallographica Section A},
+mendeley-groups = {Robotics},
+number = {5},
+pages = {827--828},
+title = {{A discussion of the solution for the best rotation to relate two sets of vectors}},
+volume = {34},
+year = {1978}
+};
+
+@inproceedings{besl1992method,
+  title={Method for registration of 3-D shapes},
+  author={Besl, Paul J and McKay, Neil D},
+  booktitle={Sensor fusion IV: control paradigms and data structures},
+  volume={1611},
+  pages={586--606},
+  year={1992},
+  organization={International Society for Optics and Photonics}
+};
+
 @article{D3VO,
   title={D3VO: Deep Depth, Deep Pose and Deep Uncertainty for Monocular Visual Odometry},
   author={Yang, Nan and von Stumberg, Lukas and Wang, Rui and Cremers, Daniel},
