--- a/RBOT_101/RBOT101_Notes/rbot_101.tex
+++ b/RBOT_101/RBOT101_Notes/rbot_101.tex
@@ -37,6 +37,8 @@
 \usepackage[most]{tcolorbox}
 \usepackage{booktabs,tabularx}
 \usepackage{caption}
+\usepackage[T1]{fontenc}
+
 \captionsetup[table]{skip=4pt,singlelinecheck=off}
 
 % correct bad hyphenation here
